namespace Coop.Domain.Profiles;

public enum ProfileType
{
    Member = 0,
    BoardMember = 1,
    StaffMember = 2,
    OnCall = 3
}
